--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "@sl-code-lords/wabetainfo": "1.2.0",
         "@tobyg74/tiktok-api-dl": "1.0.13",
         "@vitalets/google-translate-api": "9.2.0",
-        "@whiskeysockets/baileys": "6.7.9",
+        "@whiskeysockets/baileys": "git+https://github.com/rdpmjsing/Baileys-btn.git",
         "api-dylux": "latest",
         "aptoide-scraper": "1.0.1",
         "awesome-phonenumber": "6.2.0",
@@ -67,7 +67,7 @@
         "imaginesdk": "latest",
         "imgur": "latest",
         "is-standard-emoji": "1.0.0",
-        "jimp": "0.16.1",
+        "jimp": "^0.22.12",
         "jspdf": "^2.5.1",
         "lodash": "^4.17.21",
         "mathjs": "^12.0.0",
