--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "pm2 start start.js --deep-monitoring --attach --name nutsboy",
         "stop": "pm2 stop nutsboy",
-        "restart": "pm2 restart nutsboy"
+        "restart": "pm2 restart nutsboy",
+        "install" : "npm install --force"
     },
     "dependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
