--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "pm2 start start.js --deep-monitoring --attach --name nutsboy",
         "stop": "pm2 stop nutsboy",
-        "restart": "pm2 restart nutsboy",
+        "restart": "pm2 restart nutsboy"
     },
     "dependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
@@ -28,7 +28,7 @@
         "@sl-code-lords/wabetainfo": "1.2.0",
         "@tobyg74/tiktok-api-dl": "1.0.13",
         "@vitalets/google-translate-api": "9.2.0",
-        "@whiskeysockets/baileys": "git+https://github.com/rdpmjsing/Baileys-btn.git",
+        "@whiskeysockets/baileys": "git+https://github.com/prabathLK/Baileys-6.0.0.git#master",
         "api-dylux": "latest",
         "aptoide-scraper": "1.0.1",
         "awesome-phonenumber": "6.2.0",
@@ -67,7 +67,7 @@
         "imaginesdk": "latest",
         "imgur": "latest",
         "is-standard-emoji": "1.0.0",
-        "jimp": "^0.22.12",
+        "jimp": "0.16.1",
         "jspdf": "^2.5.1",
         "lodash": "^4.17.21",
         "mathjs": "^12.0.0",
@@ -81,6 +81,7 @@
         "path": "^0.12.7",
         "pino": "^7.0.5",
         "pm2": "^5.2.0",
+        "PRABATH-MD": "file:",
         "qr-image": "3.2.0",
         "qrcode": "1.5.3",
         "qrcode-terminal": "^0.12.0",
