--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "NUTSBOY",
-    "version": "26.15.2276",
-    "description": "simple",
+    "name": "PMD-WA-BOT",
+    "version": "2.1.5",
+    "description": "PMD-WA-BOT is a Powerful Whatsapp bot.  👨‍💻❤️",
     "main": "start.js",
     "scripts": {
-        "start": "pm2 start start.js --deep-monitoring --attach --name nutsboy",
-        "stop": "pm2 stop nutsboy",
-        "restart": "pm2 restart nutsboy",
+        "start": "pm2 start start.js --deep-monitoring --attach --name wabot-pmd",
+        "stop": "pm2 stop wabot-pmd",
+        "restart": "pm2 restart wabot-pmd"
     },
     "dependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
@@ -15,10 +15,8 @@
         "@blackamda/telegram-image-url": "^1.0.0",
         "@bochilteam/scraper": "4.2.4",
         "@bochilteam/scraper-sosmed": "1.0.5",
-        "@danitech/scraper": "1.0.7",
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@google/generative-ai": "0.17.1",
-        "@saipulanuar/scraper": "3.0.0",
         "@sasmeee/wabetainfo": "1.1.1",
         "@sl-code-lords/esana-news": "1.0.3",
         "@sl-code-lords/image-library": "1.0.0",
@@ -39,7 +37,6 @@
         "buffer-url": "1.0.0",
         "cc-suite": "1.0.5",
         "chart.js": "^4.4.0",
-        "chatgpt-scraper": "^1.0.1",
         "cheerio": "^1.0.0-rc.12",
         "crypto-digest-sync": "^1.0.0",
         "crypto-js": "latest",
@@ -85,29 +82,17 @@
         "qrcode": "1.5.3",
         "qrcode-terminal": "^0.12.0",
         "qs": "^6.10.1",
-        "remove-bg-node": "1.0.3",
         "Sachibot-Spotifydl": "git+https://github.com/AlenVelocity/spotifydl-core.git",
         "scr-emoji": "0.0.3",
         "seedr": "^1.1.2",
-        "simple-git": "3.22.0",
         "sinhala-cricket-newsjs": "1.0.0",
-        "sinhala-unicode": "2.0.0",
         "tesseract.js": "2.0.1",
-        "tiktokdl": "0.0.4",
-        "translatte": "^3.0.1",
-        "turndown": "7.1.3",
         "unzipper": "0.12.2",
         "util": "^0.12.4",
-        "vihangayt-fbdl": "1.0.2",
         "vm": "^0.1.0",
         "wa_set_pkg": "1.0.1",
         "wa-sticker-formatter": "^4.3.2",
-        "webtorrent": "2.5.1",
         "xvideos-scraper": "1.0.4",
-        "youtubedl-core": "4.11.7",
-        "ytdl-mp3": "3.4.0",
-        "ytdl-secktor": "latest",
-        "ytmp3-scrap":"1.0.0",
-        "bing-translate-api":"4.0.2"
+        "youtubedl-core": "4.11.7"
     }
 }
